tests/NormalTests/paczka1/fuzzy1/93281925.err
Error in line 1: lXlDAD A506 96,6
Error in line 23: v99KL1O S894 149,8
Error in line 14: pgaD8y S894 301,7
Error in line 20: lXlDAD S894 128,4
Error in line 31: QsQGFRMaRVp S572 67,7
